--- a/index.html
+++ b/index.html
@@ -11,12 +11,50 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="debug">
     <!--HEADER-->
-    <header>
-
+    <header class="flex">
+        <!--LEFT NAV-->
+        <nav>
+            <ul class="flex">
+                <li>
+                    <button class="logo">
+                        <img src="img/logo-small.png" alt="logo">
+                    </button>
+                </li>
+                <li>
+                    <button>Perchè Dropbox</button>
+                </li>
+                <li>
+                    <button>Funzioni</button>
+                </li>
+                <li>
+                    <button>Piani e Prezzi</button>
+                </li>
+            </ul>
+        </nav>
+        <!--/LEFT NAV-->
+        <!--RIGHT NAV-->
+        <nav>
+            <ul class="flex">
+                <li>
+                    <button>Supporto</button>
+                </li>
+                <li>
+                    <button>Contatta l'ufficio vendite</button>
+                </li>
+                <li>
+                    <button>Accedi</button>
+                </li>
+                <li>
+                    <button>Inizia</button>
+                </li>
+            </ul>
+        </nav>
+        <!--/RIGHT NAV-->
     </header>
     <!--/HEADER-->
+    
     <!--MAIN-->
     <main>
 
@@ -24,7 +62,7 @@
     <!--/MAIN-->
     <!--FOOTER-->
     <footer>
-        
+
     </footer>
     <!--/FOOTER-->
 </body>
