--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!--HEADER-->
     <header class="flex">
         <!--LEFT NAV-->
-        <nav>
+        <nav class="flex">
+            <div>
+                <button class="logo">
+                    <img src="img/logo-small.png" alt="logo">
+                </button>
+            </div>
             <ul class="flex">
-                <li>
-                    <button class="logo">
-                        <img src="img/logo-small.png" alt="logo">
-                    </button>
-                </li>
                 <li>
                     <button>Perchè Dropbox</button>
                 </li>
@@ -35,7 +35,7 @@
         </nav>
         <!--/LEFT NAV-->
         <!--RIGHT NAV-->
-        <nav>
+        <nav class="right-nav flex">
             <ul class="flex">
                 <li>
                     <button>Supporto</button>
@@ -46,10 +46,10 @@
                 <li>
                     <button>Accedi</button>
                 </li>
-                <li>
-                    <button>Inizia</button>
-                </li>
             </ul>
+            <div>
+                <button class="primary">Inizia</button>
+            </div>
         </nav>
         <!--/RIGHT NAV-->
     </header>
