--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dropbox</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,11 +16,9 @@
     <header class="flex">
         <!--LEFT NAV-->
         <nav class="flex">
-            <div>
-                <button class="logo">
-                    <img src="img/logo-small.png" alt="logo">
-                </button>
-            </div>
+            <button class="logo flex">
+                <img src="img/logo-small.png" alt="logo">
+            </button>
             <ul class="flex">
                 <li>
                     <button>Perchè Dropbox</button>
@@ -47,9 +45,7 @@
                     <button>Accedi</button>
                 </li>
             </ul>
-            <div>
-                <button class="primary">Inizia</button>
-            </div>
+            <button class="primary">Inizia</button>
         </nav>
         <!--/RIGHT NAV-->
     </header>
