--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="debug">
     <!--HEADER-->
-    <header class="flex">
+    <header class="viewport flex">
         <!--LEFT NAV-->
         <nav class="flex">
             <button class="logo flex">
@@ -45,15 +45,18 @@
                     <button>Accedi</button>
                 </li>
             </ul>
-            <button class="primary">Inizia</button>
+            <div class="flex">
+                <button class="primary s">Inizia</button>
+            </div>
         </nav>
         <!--/RIGHT NAV-->
     </header>
     <!--/HEADER-->
-    
     <!--MAIN-->
     <main>
+        <div class="jumbotron viewport">
 
+        </div>
     </main>
     <!--/MAIN-->
     <!--FOOTER-->
