--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dropbox</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -55,7 +55,20 @@
     <!--MAIN-->
     <main>
         <div class="jumbotron viewport">
-
+            <section class="big-container">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="box flex">
+                    <div class="col-1">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit.</p>
+                        <button class="primary m">Inizia la tua prova gratuita</button>
+                        <div>Annulla in qualsiasi momento</div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <div class="col-2">
+                        <img src="img/jumbo.png" alt="jumbo">
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
     <!--/MAIN-->
