--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body class="debug">
     <!--HEADER-->
-    <header class="viewport flex">
+    <header class="viewport row">
         <!--LEFT NAV-->
-        <nav class="flex">
-            <button class="logo flex">
+        <nav class="row">
+            <button class="logo row">
                 <img src="img/logo-small.png" alt="logo">
             </button>
-            <ul class="flex">
+            <ul class="row">
                 <li>
                     <button>Perchè Dropbox</button>
                 </li>
@@ -33,8 +33,8 @@
         </nav>
         <!--/LEFT NAV-->
         <!--RIGHT NAV-->
-        <nav class="right-nav flex">
-            <ul class="flex">
+        <nav class="right-nav row">
+            <ul class="row">
                 <li>
                     <button>Supporto</button>
                 </li>
@@ -45,7 +45,7 @@
                     <button>Accedi</button>
                 </li>
             </ul>
-            <div class="flex">
+            <div class="row">
                 <button class="primary s">Inizia</button>
             </div>
         </nav>
@@ -57,12 +57,12 @@
         <div class="jumbotron viewport">
             <section class="big-container">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <div class="box flex">
-                    <div class="col-1">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit.</p>
+                <div class="box row">
+                    <div class="col-1 column">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit. Ullam eaque ducimus velit.</p>
                         <button class="primary m">Inizia la tua prova gratuita</button>
                         <div>Annulla in qualsiasi momento</div>
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <i class="fa-sharp fa-solid fa-arrow-down"></i>
                     </div>
                     <div class="col-2">
                         <img src="img/jumbo.png" alt="jumbo">
