--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
                     <!--COL-1-->
-                    <div class="col-1 column">
+                    <div class="small-box column">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit. Ullam eaque ducimus velit.</p>
                         <button class="primary m">
                             <a href="#" alt="prova gratuita">Inizia la tua prova gratuita</a>
@@ -72,7 +72,7 @@
                     </div>
                     <!--/COL-1-->
                     <!--COL-2-->
-                    <div class="col-2">
+                    <div class="big-box">
                         <img src="img/jumbo.png" alt="jumbo">
                     </div>
                     <!--/COL-2-->
@@ -81,7 +81,7 @@
         </div>
         <!--/JUMBOTRON-->
         <!--SECTION 2-->
-        <div class="section-2 small-container">
+        <section class="section-2 small-container">
             <h2>Trova il piano business che fa per te</h2>
             <!--RADIO INPUT-->
             <div class="radio-input row">
@@ -303,26 +303,42 @@
                     </div>
                     <!--/COLUMN CONTENT-->
                 </div>
+            </div>    
             <!--/COLUMNS ROW-->
-
-
             <!--BIG COLUMN-->
-            <div class="big-col row">
-                <i class="fa-sharp fa-solid fa-building"></i>
-
-
-                <div>
-                    <h3>Enterprise</h3>
-                    <strong>Contatta l'ufficio vendite per i prezzi</strong>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
+            <div class="big-col">
+                <div class="col-header row">
+                    <i class="fa-sharp fa-solid fa-building"></i>
+                    <span>Team</span>
                 </div>
-                <div>
-                    <button></button>
+                <div class="col-content row">
+                    <div class="big-box">
+                        <h3>Enterprise</h3>
+                        <strong>Contatta l'ufficio vendite per i prezzi</strong>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
+                    </div>  
+                    <button class="primary">
+                        <a href="#" alt="contatta l'ufficio vendite">Contatta l'ufficio vendite</a>
+                    </button>
                 </div>
             </div>
             <!--/BIG COLUMN-->
-        </div>
+        </section>
         <!--/SECTION 2-->
+        <!--SECTION 3-->
+        <section class="small-container row section-3">
+            <div class="img-box">
+                <img src="img/partner.png" alt="partner">
+            </div>
+            <div class="content-box">
+                <h3>Entra in contatto con un partner dropbox</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore est magnam quidem iure ipsa cumque, aut ipsum tempora ad repellat! Voluptatibus quas labore alias asperiores iste ipsa. Vitae, voluptates veritatis.</p>
+                <button class="secondary">
+                    <a href="#" alt="trova un partner">Trova un partner</a>
+                </button>
+            </div>
+        </section>
+        <!--/SECTION 3-->
     </main>
     <!--/MAIN-->
     <!--FOOTER-->
