--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         </section>
         <!--/SECTION 2-->
         <!--SECTION 3-->
-        <section class="small-container row section-3">
+        <section class="section-3 small-container row">
             <div class="img-box">
                 <img src="img/partner.png" alt="partner">
             </div>
@@ -339,6 +339,52 @@
             </div>
         </section>
         <!--/SECTION 3-->
+        <!--SECTION 4-->
+        <section class="section-4 small-container">
+            <h2>Esegui più operazioni con dropbox business</h2>
+            <div class="columns row">
+                <div class="small-col">
+                    <img src="img/business-feature-switching-tools.png" alt="business feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                </div>
+                <div class="small-col">
+                    <img src="img/business-feature-send-files-it.png" alt="business feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                </div>
+                <div class="small-col">
+                    <img src="img/business-feature-coordinate-it.png" alt="business feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                </div>
+                <div class="small-col">
+                    <img src="img/business-feature-integrations-it.png" alt="business feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                </div>
+                <div class="small-col">
+                    <img src="img/business-feature-multi-device.png" alt="business feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                </div>
+                <div class="small-col">
+                    <img src="img/business-feature-security.png" alt="business feature">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ex corporis. Sunt enim doloribus, facere, quasi, omnis fugiat aspernatur assumenda labore minus molestias ut impedit accusantium. Delectus et accusamus libero?</p>
+                </div>
+            </div>
+            <div class="team small-container">
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <a href="#" alt="clienti">Scopri di più sui nostri clienti</a>
+            </div>
+        </section>
+        <!--/SECTION 4-->
+        <section class="section-5 viewport">
+            <div class="cube">
+                
+            </div>
+        </section>
     </main>
     <!--/MAIN-->
     <!--FOOTER-->
