--- a/index.html
+++ b/index.html
@@ -381,51 +381,62 @@
         </section>
         <!--/SECTION 4-->
         <!--SECTION 5-->
-        <section class="section-5 row">
-            <!--CUBE LEFT-->
-            <div class="cube row wrap">
-                <div class="inner-cube" id="designit">
-                    <div class="row">
-                        <img src="img/designit.svg" alt="designit">
+        <section class="section-5">
+            <div class="cubes row">
+                <!--CUBE LEFT-->
+                <div class="cube row wrap">
+                    <div class="inner-cube" id="designit">
+                        <div class="row">
+                            <img src="img/designit.svg" alt="designit">
+                        </div>
+                    </div>
+                    <div class="inner-cube row" id="asu">
+                        <img src="img/arizona_state_university.svg" alt="asu">
+                    </div>
+                    <div class="inner-cube row" id="u-florida">
+                        <img src="img/university_of_florida.svg" alt="university of florida">
+                    </div>
+                    <div class="inner-cube row" id="topps">
+                        <img src="img/topps.svg" alt="topps">
                     </div>
                 </div>
-                <div class="inner-cube row" id="asu">
-                    <img src="img/arizona_state_university.svg" alt="asu">
+                <!--/CUBE LEFT-->
+                <!--CUBE CENTER-->
+                <div class="cube cube-center">
+                    <img src="img/designit.svg" alt="designit">
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas consequuntur dolorum corrupti inventore optio rem rerum saepe fugiat, error dolor voluptatum eveniet quis aut molestias debitis. Cumque, distinctio architecto.</p>
+                    <span>Morten Thomsen, Global IT Lead</span>
                 </div>
-                <div class="inner-cube row" id="u-florida">
-                    <img src="img/university_of_florida.svg" alt="university of florida">
+                <!--/CUBE CENTER-->
+                <!--CUBE RIGHT-->
+                <div class="cube row wrap">
+                    <div class="inner-cube row" id="wbr">
+                        <img src="img/world_bicycle_relief.svg" alt="world bicycle relief">
+                    </div>
+                    <div class="inner-cube row" id="hearst">
+                        <img src="img/hearst_corp.svg" alt="hearst">
+                    </div>
+                    <div class="inner-cube row" id="lonely-planet">
+                        <img src="img/lonely_planet.svg" alt="lonely planet">
+                    </div>
+                    <div class="inner-cube row" id="clear-channel">
+                        <image src="img/clear_channel.svg" alt="clear channel" class="change-color">
+                    </div>
                 </div>
-                <div class="inner-cube row" id="topps">
-                    <img src="img/topps.svg" alt="topps">
+                <!--/CUBE RIGHT-->
+            </div>
+            <div class="porta-dropbox row">
+                <div class="small-container row">
+                    <h3>Porta Dropbox Business nella tua azienda.</h3>
+                    <button class="secondary">
+                        <a href="#">Inizia la tua prova gratuita</a>
+                    </button>
                 </div>
             </div>
-            <!--/CUBE LEFT-->
-            <!--CUBE CENTER-->
-            <div class="cube cube-center">
-                <img src="img/designit.svg" alt="designit">
-                <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas consequuntur dolorum corrupti inventore optio rem rerum saepe fugiat, error dolor voluptatum eveniet quis aut molestias debitis. Cumque, distinctio architecto.</p>
-                <span>Morten Thomsen, Global IT Lead</span>
-            </div>
-            <!--/CUBE CENTER-->
-            <!--CUBE RIGHT-->
-            <div class="cube row wrap">
-                <div class="inner-cube row" id="wbr">
-                    <img src="img/world_bicycle_relief.svg" alt="world bicycle relief">
-                </div>
-                <div class="inner-cube row" id="hearst">
-                    <img src="img/hearst_corp.svg" alt="hearst">
-                </div>
-                <div class="inner-cube row" id="lonely-planet">
-                    <img src="img/lonely_planet.svg" alt="lonely planet">
-                </div>
-                <div class="inner-cube row" id="clear-channel">
-                    <image src="img/clear_channel.svg" alt="clear channel" class="change-color">
-                </div>
-            </div>
-            <!--/CUBE RIGHT-->
         </section>
         <!--/SECTION 5-->
+        
     </main>
     <!--/MAIN-->
     <!--FOOTER-->
