--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="box row">
                     <!--COL-1-->
-                    <div class="small-box column">
+                    <div class="col-1 column">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat unde corrupti, nisi voluptate nihil corporis quasi omnis sequi, dolorum dolore iste modi perferendis ullam eaque adipisci placeat quidem ducimus velit. Ullam eaque ducimus velit.</p>
                         <button class="primary m">
                             <a href="#" alt="prova gratuita">Inizia la tua prova gratuita</a>
@@ -72,7 +72,7 @@
                     </div>
                     <!--/COL-1-->
                     <!--COL-2-->
-                    <div class="big-box">
+                    <div class="col-2">
                         <img src="img/jumbo.png" alt="jumbo">
                     </div>
                     <!--/COL-2-->
@@ -137,7 +137,7 @@
                                 <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
                             </button>
                             <div>oppure <a href="#" alt="acquista" class="link-acquista-ora">acquista ora</a></div>
-                            <hr>
+                            <hr class="hr-small">
                         </div>
                         <div class="punti-salienti">
                             <h4>Punti Salienti del piano</h4>
@@ -201,7 +201,7 @@
                                 <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
                             </button>
                             <div>oppure <a href="#" alt="acquista" class="link-acquista-ora">acquista ora</a></div>
-                            <hr>
+                            <hr class="hr-small">
                         </div>
                         <div class="punti-salienti">
                             <h4>Punti Salienti del piano</h4>
@@ -281,7 +281,7 @@
                                 <a href="#" alt="prova gratis">Prova gratis per 30 giorni</a>
                             </button>
                             <div>oppure <a href="#" alt="acquista" class="link-acquista-ora">acquista ora</a></div>
-                            <hr>
+                            <hr class="hr-small">
                         </div>
                         <div class="punti-salienti">
                             <h4>Punti Salienti del piano</h4>
@@ -312,7 +312,7 @@
                     <span>Team</span>
                 </div>
                 <div class="col-content row">
-                    <div class="big-box">
+                    <div class="half-box">
                         <h3>Enterprise</h3>
                         <strong>Contatta l'ufficio vendite per i prezzi</strong>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
@@ -327,10 +327,10 @@
         <!--/SECTION 2-->
         <!--SECTION 3-->
         <section class="section-3 small-container row">
-            <div class="img-box">
+            <div class="big-box">
                 <img src="img/partner.png" alt="partner">
             </div>
-            <div class="content-box">
+            <div class="content-box small-box">
                 <h3>Entra in contatto con un partner dropbox</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore est magnam quidem iure ipsa cumque, aut ipsum tempora ad repellat! Voluptatibus quas labore alias asperiores iste ipsa. Vitae, voluptates veritatis.</p>
                 <button class="secondary">
@@ -375,8 +375,10 @@
                 </div>
             </div>
             <div class="team small-container">
-                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
-                <a href="#" alt="clienti">Scopri di più sui nostri clienti</a>
+                <div class="half-box">
+                    <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <a href="#" alt="clienti">Scopri di più sui nostri clienti</a>
+                </div>
             </div>
         </section>
         <!--/SECTION 4-->
@@ -428,20 +430,165 @@
             </div>
             <div class="porta-dropbox row">
                 <div class="small-container row">
-                    <h3>Porta Dropbox Business nella tua azienda.</h3>
-                    <button class="secondary">
-                        <a href="#">Inizia la tua prova gratuita</a>
-                    </button>
+                    <div class="small-box">
+                        <h2>Porta Dropbox Business nella tua azienda.</h2>
+                    </div>
+                    <div>
+                        <button class="secondary">
+                            <a href="#">Inizia la tua prova gratuita</a>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
         <!--/SECTION 5-->
-        
+        <!--SECTION 6-->
+        <section class="section-6 small-container">
+            <h2>Domande frequenti</h2>
+            <div class="faq big-col">
+                <hr>  
+                <div class="row">
+                    <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
+                    <div>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
+                    <div>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced</h4>
+                    <div>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </section>
+        <!--/SECTION 6-->
     </main>
     <!--/MAIN-->
     <!--FOOTER-->
     <footer>
-
+        <div class="footer-container column">
+            <div class="footer-columns row">
+                <div class="col">
+                    <h3>Dropbox</h3>
+                    <ul>
+                        <li>
+                            <a href="#" alt="applicazione desktop">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="perchè dropbox">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="piani">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="sicurezza">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="funzioni">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Prodotti</h3>
+                    <ul>
+                        <li>
+                            <a href="#" alt="applicazione desktop">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="perchè dropbox">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="piani">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="sicurezza">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="funzioni">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Azienda</h3>
+                    <ul>
+                        <li>
+                            <a href="#" alt="applicazione desktop">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="perchè dropbox">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="piani">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="sicurezza">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="funzioni">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Supporto</h3>
+                    <ul>
+                        <li>
+                            <a href="#" alt="applicazione desktop">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="perchè dropbox">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="piani">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="sicurezza">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="funzioni">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Community</h3>
+                    <ul>
+                        <li>
+                            <a href="#" alt="applicazione desktop">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="perchè dropbox">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="piani">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="sicurezza">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#" alt="funzioni">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="lang">
+                <hr>
+                <div>
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <span>Italiano</span>
+                    <a href="#">
+                        <i class="fa-solid fa-angle-up"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--/FOOTER-->
 </body>
