--- a/index.html
+++ b/index.html
@@ -317,9 +317,11 @@
                         <strong>Contatta l'ufficio vendite per i prezzi</strong>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore sint laboriosam sapiente.</p>
                     </div>  
-                    <button class="primary">
-                        <a href="#" alt="contatta l'ufficio vendite">Contatta l'ufficio vendite</a>
-                    </button>
+                    <div>
+                        <button class="primary">
+                            <a href="#" alt="contatta l'ufficio vendite">Contatta l'ufficio vendite</a>
+                        </button>
+                    </div>
                 </div>
             </div>
             <!--/BIG COLUMN-->
